--- a/src/app/component/conteudo/conteudo.component.html
+++ b/src/app/component/conteudo/conteudo.component.html
@@ -1,5 +1,6 @@
-
-        <span class="text-welcome">
+<body>
+<div class="con1">
+<span class="text-welcome">
                 <p> Olá, meu nome é <br>
                         <b style="font-size: 40px;">Emanuel Raimundo</b><br>
                         E seja bem vindo ao meu portifólio!<br> 
@@ -11,4 +12,5 @@
                     </section>
                 
         </span>
-
+</div>
+</body>
