--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="adjust-container">
             <span class="child">
-                <a class="link" href="#"> GitHub</a>
+                <a class="link"  target="_blank" href="https://github.com/EmanuelRLima"> GitHub</a>
             </span>
         </div>
     </div>
