--- a/src/app/component/conteudo/conteudo.component.css
+++ b/src/app/component/conteudo/conteudo.component.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=BenchNine:wght@300&display=swap');
 
+body{
+    background-color: black;
+}
 .text-welcome{
     position: absolute;
     width: 70%;
@@ -43,12 +46,3 @@
         top:78%;     
     }  
 }
-
-
-
-
-
-
-
-
-
