--- a/src/app/component/views/start/start.component.css
+++ b/src/app/component/views/start/start.component.css
@@ -1,8 +1,154 @@
-.header{
-    position: absolute;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif&display=swap');
+.idem{
     width: 100%;
-    color: rgba(209, 206, 209, 0.4);
-    font-size: 20px;
-    line-height: 70px;
-    box-shadow: 0 3px 5px rgba(112, 111, 111, 0.3);
+    height: 920px;
+    background-color: ghostwhite;
+}
+.tex{
+    width: 75%;
+    padding: 5% 0 1% 12.5%;
+    text-align: center;
+    line-height: 1.3;
+    font-family: 'Roboto Serif', sans-serif;
+    font-size: 25px;
+    animation-name: op;
+    animation-duration: 4s;
+}
+
+
+.d:hover{
+    opacity: 85%;
+}
+.c:hover{
+    opacity: 85%;
+}
+
+.c{
+    width: 500px;
+    height: 400px;
+    cursor: pointer;
+    margin: 2% 0 0 10%;
+    object-fit: cover;
+    animation-name: op;
+    animation-duration: 2s;
+}
+
+.d{
+    width: 500px;
+    height: 400px;
+    cursor: pointer;
+    float: right;
+    margin: 2% 10% 0 0;
+    object-fit: cover;
+    animation-name: op;
+    animation-duration: 2s;
+}
+.seta{
+    
+    margin: 0 0 10% 0;
+}
+.seta{
+    position: absolute;
+    margin-right: -50%;
+    transform: translate(-50%, 1210%);
+    width: 80px;
+    animation-name: arrowmove;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    left: 50%;
+}
+
+
+
+
+
+
+/* PONTOS DE QUEBRA */ 
+@media only screen and (max-width: 1300px) {
+    .tex{
+        width: 80%;
+        padding: 5% 0 1% 11%;
+    }
+    
+    .c , .d{
+        width: 430px;
+        height: 320px;
+        animation-name: op;
+        animation-duration: 2s;      
+    }
+  }
+
+  @media only screen and (max-width: 1130px) {
+    .tex{
+        width: 85%;
+        padding: 10% 0 0 8%;
+    }
+    .c , .d{
+        width: 320px;
+        height: 220px;       
+    }
+  }
+
+  @media only screen and (max-width: 850px) {
+    .tex{
+        font-size: 18px;
+    }
+    .c , .d{
+        width: 250px;
+        height: 150px;      
+    }
+    .seta{
+        transform: translate(-50%, 1115%);
+    }
+  }
+
+  @media only screen and (max-width: 650px) {
+    .tex{
+        font-size: 15px;
+    }
+    .c , .d{
+        width: 220px;
+        height: 140px;      
+    }
+    .seta{
+        transform: translate(-50%, 1115%);
+    }
+  }
+  @media only screen and (max-width: 580px) {
+    .c , .d{
+        width: 260px;
+        height: 180px;
+        float: none;
+        margin: 6% 0 0 27%;      
+    }
+  }
+  @media only screen and (max-width: 480px) {
+    .c , .d{
+        float: none;
+        margin: 6% 0 0 22%;      
+    }
+  }
+  @media only screen and (max-width: 400px) {
+    .c , .d{
+        float: none;
+        margin: 6% 0 0 19%;      
+    }
+  }
+  @media only screen and (max-width: 380px) {
+    .c , .d{
+        float: none;
+        margin: 6% 0 0 16%;      
+    }
+  }
+
+  /* ANIMAÇÃO */
+
+  @keyframes op {
+    0%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
+    }
 }
