--- a/src/app/component/views/curriculo/curriculo.component.html
+++ b/src/app/component/views/curriculo/curriculo.component.html
@@ -2,7 +2,71 @@
     <div>
         <p class="Tmain">
             Nesta seção destaco minhas experiências profissionais e minha formação academica.
+            <br> <br> <br> FORMAÇÃO ACADEMICA
         </p>
     </div>
+    
+    <div class="formacao">
+
+        <span class="educacion">
+           
+            <section class="IF">
+                <img class="img" src="assets/sobre/IF.png"> <p> Ensino médio e técnico em informática para internet <br> 2017 - 2021 </p>
+            </section>
+
+            <section class="estacio">
+                <img class="img" src="assets/sobre/estacio.png"> <p> Bacharelado em engenharia de software <br> 3° período <br> 2021 - 2024 </p>
+            </section>
+
+            <section>
+                <img class="img" src="assets/sobre/unip.png"> <p> Tecnológo em Analise e desenvolvimento de sistemas <br> 1° período <br> 2022 - 2024 </p>
+            </section>  
+
+        </span>
+
+    </div>
+
+    <div>
+        
+        <p class="Tmain"> EXPERIÊNCIAS PROFISSIONAIS </p>
+
+            <div class="formacao">
+                <span class="xp">
+                    <section class="extra">
+                        <img class="img" src="assets/sobre/extra.jpg"> <p> Aprendiz em comércio e varejo <br> 2016 - 2017 </p>
+                    </section>  
+
+                    <section class="TP">
+                        <img class="img" src="assets/sobre/TP.png"> <p> Operador de telemarketing <br> 2021 - (Até o momento) </p>
+                    </section>
+                </span>
+            </div>
+    </div>
+
+    <div>
+        
+        <p class="Tmain"> Habilidades </p>
+
+            <div class="formacao">
+                <span class="hb">
+                    <section>
+                        <img class="img fit" src="assets/sobre/watford.png"> <p> Curso de inglês <br> Nivel atual: intermediário </p>
+                    </section>  
+
+                    <section class="estacio">
+                        <img class="img" src="assets/sobre/prog.png"> <p> Programação nas seguintes linguagens e <br>frameworks:  
+                            <br> HTML/CSS , JS, PHP, C++, SQL,<br> BOOTSTRAP, ANGULAR, SASS/LESS,<br> VueJs, CodeIgniter. </p>
+                    </section>
+
+                    <section>
+                        <img class="img fit" src="assets/sobre/edit.png"> <p> Edição de vídeo com os programas: <br> Adobe Premiere, Adobe After Effects,<br> Adobe photoshop CS6.</p>
+                    </section>
+                </span>
+            </div>
+    </div>
+
+    <section>   
+        <a href="#"> <img class="seta" src="assets/complementos/arrow.png"> </a>
+    </section>
     
 </div>
