--- a/src/app/component/views/start/start.component.css
+++ b/src/app/component/views/start/start.component.css
@@ -89,6 +89,9 @@
         height: 220px;       
     }
   }
+  .seta{
+    transform: translate(-50%, 1175%);
+}
 
   @media only screen and (max-width: 850px) {
     .tex{
@@ -141,7 +144,12 @@
         margin: 6% 0 0 16%;      
     }
   }
-
+  @media only screen and (max-width: 340px) {
+    .c , .d{
+        width: 200px;
+        height: 150px; 
+    }
+  }
   /* ANIMAÇÃO */
 
   @keyframes op {
