--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <app-conteudo></app-conteudo>
 <app-start></app-start>
 <app-curriculo></app-curriculo>
+<app-sobre></app-sobre>
+<app-contato></app-contato>
+<app-footer></app-footer>
