--- a/src/app/component/conteudo/conteudo.component.html
+++ b/src/app/component/conteudo/conteudo.component.html
@@ -8,9 +8,9 @@
                         Vamos lá?
                     </p>
                     <section>   
-                        <a href="#"> <img class="seta" src="assets/complementos/arrow.png"> </a>
+                        <a href="#start" > <img class="seta" src="assets/complementos/arrow.png"> </a>
                     </section>
-                
-        </span>
+                        </span>
 </div>
+<router-outlet></router-outlet>
 </body>
