--- a/src/app/component/views/curriculo/curriculo.component.html
+++ b/src/app/component/views/curriculo/curriculo.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" id="curriculo">
     <div>
         <p class="Tmain">
             Nesta seção destaco minhas experiências profissionais e minha formação academica.
@@ -66,7 +66,7 @@
     </div>
 
     <section>   
-        <a href="#"> <img class="seta" src="assets/complementos/arrow.png"> </a>
+        <a href="#sobre"> <img class="seta" src="assets/complementos/arrow.png"> </a>
     </section>
     
 </div>
