--- a/src/app/component/views/start/start.component.html
+++ b/src/app/component/views/start/start.component.html
@@ -1,5 +1,5 @@
 
-<div class="idem"> 
+<div class="idem" id="start"> 
 <div>
     <p class="tex"> 
         Pensado na ideia de criar um portfólio, o objetivo principal é compartilhar projetos e afins já criados, abaixo você consegue ver projetos de minha autoria
@@ -14,7 +14,7 @@
 </div>
 <div class="setaa">
 <section>   
-    <a href="#"> <img class="seta" src="assets/complementos/arrowdraw.png"> </a>
+    <a href="#curriculo"> <img class="seta" src="assets/complementos/arrowdraw.png"> </a>
 </section>
 </div>
 </div>
