--- a/src/app/component/views/curriculo/curriculo.component.html
+++ b/src/app/component/views/curriculo/curriculo.component.html
@@ -37,7 +37,7 @@
                     </section>  
 
                     <section class="TP">
-                        <img class="img" src="assets/sobre/TP.png"> <p> Operador de telemarketing <br> 2021 - (Até o momento) </p>
+                        <img class="img" src="assets/sobre/TP.png"> <p> Expert Nivel 2 <br> 2021 - (Até o momento) </p>
                     </section>
                 </span>
             </div>
