--- a/src/app/component/views/start/start.component.html
+++ b/src/app/component/views/start/start.component.html
@@ -1,5 +1,6 @@
 
 <div class="idem" id="start"> 
+
 <div>
     <p class="tex"> 
         Pensado na ideia de criar um portfólio, o objetivo principal é compartilhar projetos e afins já criados, abaixo você consegue ver projetos de minha autoria
@@ -7,14 +8,24 @@
         o mais sobre minhas formações e experiências.
     </p>
 
-        <img class="c" src="assets/sobre/Projetos.jpg">
+       <a (click)="showprojet()" > <img class="c" src="assets/sobre/Projetos.jpg"></a>
     
-        <img class="d" src="assets/sobre/Portfolio.png">
+        <img (click)="showprojet()" class="d" src="assets/sobre/Portfolio.png">
 
 </div>
 <div class="setaa">
 <section>   
     <a href="#curriculo"> <img class="seta" src="assets/complementos/arrowdraw.png"> </a>
 </section>
+
 </div>
+</div>
+<div id="project" class="Projetos">
+
+    <a (click)="showoffprojet()" > <img class="exe" src="assets/sobre/x.png"></a>
+    
+<p class="tex"> 
+        Abaixo eu disponibilizo alguns projetos que já foram feitos criado por mim, sempre que houverem projetos novos atualizarei essa pagina.
+    </p>
+    
 </div>
