--- a/src/app/component/views/start/start.component.html
+++ b/src/app/component/views/start/start.component.html
@@ -28,4 +28,7 @@
         Abaixo eu disponibilizo alguns projetos que já foram feitos criado por mim, sempre que houverem projetos novos atualizarei essa pagina.
     </p>
     
+    <button class="btn">WaySafe!</button>
+
+    <button class="btn">Primeiro Portfólio</button>
 </div>
