--- a/src/app/component/views/curriculo/curriculo.component.css
+++ b/src/app/component/views/curriculo/curriculo.component.css
@@ -3,7 +3,7 @@
     font-family: 'Roboto Serif', sans-serif;
 }
 .main{
-    background-color: aqua;
+    background-color: #02ffff;;
     width: 100%;
     height: 1850px;
 }
