--- a/src/app/component/views/start/start.component.html
+++ b/src/app/component/views/start/start.component.html
@@ -10,7 +10,7 @@
 
        <a (click)="showprojet()" > <img class="c" src="assets/sobre/Projetos.jpg"></a>
     
-        <img (click)="showprojet()" class="d" src="assets/sobre/Portfolio.png">
+       <a target="_blank" href="https://github.com/EmanuelRLima/portfolio-web"><img class="d" src="assets/sobre/Portfolio.png"></a>
 
 </div>
 <div class="setaa">
@@ -24,11 +24,13 @@
 
     <a (click)="showoffprojet()" > <img class="exe" src="assets/sobre/x.png"></a>
     
-<p class="tex"> 
-        Abaixo eu disponibilizo alguns projetos que já foram feitos criado por mim, sempre que houverem projetos novos atualizarei essa pagina.
+<p class="tex tm"> 
+        Abaixo eu disponibilizo alguns projetos que já foram feitos criado por mim, ao cliclar você será redirecionado para o GitHub onde entederá melhor sobre o projeto, sempre que houverem projetos novos atualizarei essa pagina.
     </p>
     
-    <button class="btn">WaySafe!</button>
+    <a target="_blank" href="https://github.com/EmanuelRLima/waysafe" class="btnw btn-s">WaySafe!</a>
 
-    <button class="btn">Primeiro Portfólio</button>
+    <a target="_blank" href="https://github.com/EmanuelRLima/Portfolio" class="btn btn-s">Primeiro Portfólio</a>
+
+    <a class="btnx">Em breve...</a>
 </div>
