--- a/src/app/component/views/sobre/sobre.component.css
+++ b/src/app/component/views/sobre/sobre.component.css
@@ -2,7 +2,7 @@
     font-family: 'Roboto Serif', sans-serif;
 }
 .main{
-    background-color:cornflowerblue;
+    background-color:#6698f1;;
     width: 100%;
     height: 965px;
 }
