--- a/src/app/component/views/start/start.component.css
+++ b/src/app/component/views/start/start.component.css
@@ -1,9 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif&display=swap');
+*{
+    font-family: 'Roboto Serif', sans-serif;
+}
 .idem{
     width: 100%;
     height: 965px;
-    background-color: ghostwhite;
+    background-color: #f7f7fd;;
 }
 
 .tex{
@@ -17,11 +20,11 @@
     animation-duration: 4s;
 }
 .Projetos{
-    display: block;
+    display: none;
     position: absolute;
-    top: 42%;
+    top: 39%;
     left: 50%;
-    background-color: aqua;
+    background-color: #bcd7e1;;
     margin-right: -50%;
     transform: translate(-50%, 80%);
     z-index: 1;
@@ -29,12 +32,62 @@
     height: 800px;
     animation-name: op;
     animation-duration: 1s;
+    box-shadow: rgb(0 0 0 / 75%) 0px 20px 45px, rgb(0 0 0 / 28%) 0px 16px 15px;
 }
 .btn{
     margin: 0 0 0 30px;
     text-align: center;
     width: 160px;
     height: 30px;
+    position: absolute;
+    top: 42%;
+    left: 38%;
+    margin-right: -50%;
+    transform: translate(-50%, 80%);
+    animation-name: op;
+    animation-duration: 4s;
+}
+.btnw{
+    margin: 0 0 0 30px;
+    text-align: center;
+    width: 160px;
+    height: 30px;
+    position: absolute;
+    top: 42%;
+    left: 58%;
+    margin-right: -50%;
+    transform: translate(-50%, 80%);
+    animation-name: op;
+    animation-duration: 4s;
+}
+.btnx{
+    margin: 0 0 0 30px;
+    text-align: center;
+    width: 160px;
+    height: 30px;
+    position: absolute;
+    top: 55%;
+    left: 48%;
+    margin-right: -50%;
+    transform: translate(-50%, 80%);
+    box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+    background-color: #4b3585;
+    color: #93f5f0;
+    border-radius: 10%;
+    cursor: no-drop;
+    line-height: 30px;
+    animation-name: op;
+    animation-duration: 4s;
+}
+.btn-s{
+    background-color: #4b3585;
+    border-radius: 10%;
+    box-shadow: rgb(240 46 170 / 40%) -5px 5px, rgb(240 46 170 / 30%) -10px 10px, rgb(240 46 170 / 20%) -15px 15px, rgb(240 46 170 / 10%) -20px 20px, rgb(240 46 170 / 5%) -25px 25px;
+    color: #93f5f0;
+    text-decoration: none;
+    line-height: 30px;
+    animation-name: op;
+    animation-duration: 4s;
 }
 .d:hover{
     opacity: 85%;
@@ -60,6 +113,7 @@
     object-fit: cover;
     animation-name: op;
     animation-duration: 2s;
+    box-shadow: rgb(0 0 0 / 75%) 0px 20px 45px, rgb(0 0 0 / 28%) 0px 16px 15px;
 }
 
 .d{
@@ -71,6 +125,7 @@
     object-fit: cover;
     animation-name: op;
     animation-duration: 2s;
+    box-shadow: rgb(0 0 0 / 75%) 0px 20px 45px, rgb(0 0 0 / 28%) 0px 16px 15px;
 }
 .seta{
     
@@ -105,6 +160,11 @@
         animation-name: op;
         animation-duration: 2s;      
     }
+    .Projetos{
+        top: 55%;
+        width: 1023px;
+        height: 651px;
+    }
   }
 
   @media only screen and (max-width: 1130px) {
@@ -115,6 +175,23 @@
     .c , .d{
         width: 320px;
         height: 220px;       
+    }
+    .Projetos{
+        top: 80%;
+        width:  650px;
+        height: 456px;
+    }
+    .tm{
+        font-size: 15px;
+    }
+    .btn{
+        left: 30%;
+    }
+    .btnw{
+        left: 65%;
+    }
+    .btnx{
+        top: 60%;
     }
   }
   .seta{
@@ -145,6 +222,11 @@
     .seta{
         transform: translate(-50%, 1115%);
     }
+    .Projetos{
+        top: 80%;
+        width:  580px;
+        height: 456px;
+    }
   }
   @media only screen and (max-width: 580px) {
     .c , .d{
@@ -153,17 +235,58 @@
         float: none;
         margin: 6% 0 0 27%;      
     }
+    .Projetos{
+        top: 80%;
+        width:  478px;
+        height: 456px;
+    }
+    .btn{
+        left: 20%;
+    }
+    .btnw{
+        left: 70%;
+    }
+    .btnx{
+        top: 65%;
+        left: 44%;
+    }
   }
   @media only screen and (max-width: 480px) {
     .c , .d{
         float: none;
         margin: 6% 0 0 22%;      
     }
+    .Projetos{
+        top: 80%;
+        width:  398px;
+        height: 456px;
+    }
+
   }
   @media only screen and (max-width: 400px) {
     .c , .d{
         float: none;
         margin: 6% 0 0 19%;      
+    }
+    .Projetos{
+        top: 80%;
+        width:  378px;
+        height: 456px;
+    }
+    .btn{
+        top: 37%;
+        left: 44%;
+    }
+    .btnw{
+        top: 50%;
+        left: 44%; 
+    }
+    .btnx{
+        top: 65%;
+        left: 44%;
+    }
+    .btn-s{
+        box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
     }
   }
   @media only screen and (max-width: 380px) {
@@ -171,20 +294,58 @@
         float: none;
         margin: 6% 0 0 16%;      
     }
+    .Projetos{
+        top: 80%;
+        width:  338px;
+        height: 456px;
+    }
   }
   @media only screen and (max-width: 340px) {
     .c , .d{
         width: 200px;
         height: 150px; 
     }
-  }
-  /* ANIMAÇÃO */
 
-  @keyframes op {
-    0%{
-        opacity: 0%;
+    .Projetos{
+        top: 50%;
+        width: 197px;
+        height: 645px;
     }
-    100%{
-        opacity: 100%;
+    .tm{
+        font-size: 12px;
+        margin: 35% 0 0 0;
     }
-}
+    .btn{
+        top: 50%;
+        left: 35%;
+    }
+    .btnw{
+        top: 60%;
+        left: 35%;
+    }
+    .btnx{
+        top: 70%;
+        left: 35%;
+    }
+  }
+
+@media only screen and (max-height: 600px) {
+    .Projetos{
+        top: 5%;
+    }
+  }
+  @media only screen and (max-width: 1300px) and (max-height: 600px) {
+    .Projetos{
+        top: 40%;
+    }
+  }
+  @media only screen and (max-width: 1130px) and (max-height: 600px) {
+    .Projetos{
+        top: 75%;
+    }
+  }
+  @media only screen and (max-width: 340px) and (max-height: 600px) {
+    .Projetos{
+        top: 35%;
+    }
+  }
