--- a/src/app/component/views/start/start.component.html
+++ b/src/app/component/views/start/start.component.html
@@ -8,9 +8,9 @@
         o mais sobre minhas formações e experiências.
     </p>
 
-       <a (click)="showprojet()" > <img class="c" src="assets/sobre/Projetos.jpg"></a>
+       <a (click)="showprojet()" > <img class="box adjust-a" src="assets/sobre/Projetos.jpg"></a>
     
-       <a target="_blank" href="https://github.com/EmanuelRLima/portfolio-web"><img class="d" src="assets/sobre/Portfolio.png"></a>
+       <a target="_blank" href="https://github.com/EmanuelRLima/portfolio-web"><img class="box adjust-b" src="assets/sobre/Portfolio.png"></a>
 
 </div>
 <div class="setaa">
@@ -22,15 +22,15 @@
 </div>
 <div id="project" class="Projetos">
 
-    <a (click)="showoffprojet()" > <img class="exe" src="assets/sobre/x.png"></a>
+    <a (click)="showoffprojet()" > <img class="X" src="assets/sobre/x.png"></a>
     
 <p class="tex tm"> 
         Abaixo eu disponibilizo alguns projetos que já foram feitos criado por mim, ao cliclar você será redirecionado para o GitHub onde entederá melhor sobre o projeto, sempre que houverem projetos novos atualizarei essa pagina.
     </p>
     
-    <a target="_blank" href="https://github.com/EmanuelRLima/waysafe" class="btnw btn-s">WaySafe!</a>
+    <a target="_blank" href="https://github.com/EmanuelRLima/waysafe" class="btnw btn btn-s">WaySafe!</a>
 
     <a target="_blank" href="https://github.com/EmanuelRLima/Portfolio" class="btn btn-s">Primeiro Portfólio</a>
 
-    <a class="btnx">Em breve...</a>
+    <a class="btnx btn btn-s">Em breve...</a>
 </div>
