--- a/src/app/component/views/start/start.component.css
+++ b/src/app/component/views/start/start.component.css
@@ -3,18 +3,19 @@
 *{
     font-family: 'Roboto Serif', sans-serif;
 }
+/*Definições da página*/ 
 .idem{
     width: 100%;
     height: 965px;
     background-color: #f7f7fd;;
 }
 
+/*Molde de texto e Div principal*/ 
 .tex{
     width: 75%;
     padding: 5% 0 1% 12.5%;
     text-align: center;
     line-height: 1.3;
-    font-family: 'Roboto Serif', sans-serif;
     font-size: 25px;
     animation-name: op;
     animation-duration: 4s;
@@ -22,18 +23,20 @@
 .Projetos{
     display: none;
     position: absolute;
+    width: 1300px;
+    height: 800px;
     top: 39%;
     left: 50%;
     background-color: #bcd7e1;;
     margin-right: -50%;
     transform: translate(-50%, 80%);
     z-index: 1;
-    width: 1300px;
-    height: 800px;
     animation-name: op;
     animation-duration: 1s;
     box-shadow: rgb(0 0 0 / 75%) 0px 20px 45px, rgb(0 0 0 / 28%) 0px 16px 15px;
 }
+
+/*Botões do box projeto*/ 
 .btn{
     margin: 0 0 0 30px;
     text-align: center;
@@ -48,36 +51,12 @@
     animation-duration: 4s;
 }
 .btnw{
-    margin: 0 0 0 30px;
-    text-align: center;
-    width: 160px;
-    height: 30px;
-    position: absolute;
-    top: 42%;
     left: 58%;
-    margin-right: -50%;
-    transform: translate(-50%, 80%);
-    animation-name: op;
-    animation-duration: 4s;
 }
 .btnx{
-    margin: 0 0 0 30px;
-    text-align: center;
-    width: 160px;
-    height: 30px;
-    position: absolute;
     top: 55%;
     left: 48%;
-    margin-right: -50%;
-    transform: translate(-50%, 80%);
-    box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
-    background-color: #4b3585;
-    color: #93f5f0;
-    border-radius: 10%;
     cursor: no-drop;
-    line-height: 30px;
-    animation-name: op;
-    animation-duration: 4s;
 }
 .btn-s{
     background-color: #4b3585;
@@ -86,16 +65,12 @@
     color: #93f5f0;
     text-decoration: none;
     line-height: 30px;
-    animation-name: op;
-    animation-duration: 4s;
 }
-.d:hover{
+.adjust-a:hover ,.adjust-b:hover{
     opacity: 85%;
 }
-.c:hover{
-    opacity: 85%;
-}
-.exe{
+/*X do Box*/ 
+.X{
     width: 42px;
     height: 39px;
     float: right;
@@ -105,33 +80,29 @@
     animation-name: op;
     animation-duration: 2s;
 }
-.c{
+
+/*BOXES DE PROJETO E PORTFÓLIO*/ 
+
+.box{
     width: 500px;
     height: 400px;
     cursor: pointer;
-    margin: 2% 0 0 10%;
     object-fit: cover;
     animation-name: op;
     animation-duration: 2s;
     box-shadow: rgb(0 0 0 / 75%) 0px 20px 45px, rgb(0 0 0 / 28%) 0px 16px 15px;
 }
-
-.d{
-    width: 500px;
-    height: 400px;
-    cursor: pointer;
+.adjust-a{
+    margin: 2% 0 0 10%;
+}
+.adjust-b{
     float: right;
     margin: 2% 10% 0 0;
-    object-fit: cover;
-    animation-name: op;
-    animation-duration: 2s;
-    box-shadow: rgb(0 0 0 / 75%) 0px 20px 45px, rgb(0 0 0 / 28%) 0px 16px 15px;
 }
+
+/*Seta de movimentação do site*/ 
 .seta{
-    
     margin: 0 0 10% 0;
-}
-.seta{
     position: absolute;
     margin-right: -50%;
     transform: translate(-50%, 1210%);
@@ -143,209 +114,203 @@
 }
 
 
-
-
-
-
 /* PONTOS DE QUEBRA */ 
 @media only screen and (max-width: 1300px) {
-    .tex{
-        width: 80%;
-        padding: 5% 0 1% 11%;
-    }
+.tex{
+    width: 80%;
+    padding: 5% 0 1% 11%;
+}
     
-    .c , .d{
-        width: 430px;
-        height: 320px;
-        animation-name: op;
-        animation-duration: 2s;      
-    }
-    .Projetos{
-        top: 55%;
-        width: 1023px;
-        height: 651px;
-    }
-  }
+.adjust-a , .adjust-b{
+    width: 430px;
+    height: 320px;    
+}
+.Projetos{
+    top: 55%;
+    width: 1023px;
+    height: 651px;
+}
 
-  @media only screen and (max-width: 1130px) {
-    .tex{
-        width: 85%;
-        padding: 10% 0 0 8%;
-    }
-    .c , .d{
-        width: 320px;
-        height: 220px;       
-    }
-    .Projetos{
-        top: 80%;
-        width:  650px;
-        height: 456px;
-    }
-    .tm{
-        font-size: 15px;
-    }
-    .btn{
-        left: 30%;
-    }
-    .btnw{
-        left: 65%;
-    }
-    .btnx{
-        top: 60%;
-    }
-  }
-  .seta{
+}
+
+@media only screen and (max-width: 1130px) {
+.tex{
+    width: 85%;
+    padding: 10% 0 0 8%;
+}
+.adjust-a , .adjust-b{
+    width: 320px;
+    height: 220px;       
+}
+.Projetos{
+    top: 80%;
+    width:  650px;
+    height: 456px;
+}
+.tm{
+    font-size: 15px;
+}
+.btn{
+    left: 30%;
+}
+.btnw{
+    left: 65%;
+}
+.btnx{
+    top: 60%;
+}
+.seta{
     transform: translate(-50%, 1175%);
 }
 
-  @media only screen and (max-width: 850px) {
-    .tex{
-        font-size: 18px;
-    }
-    .c , .d{
-        width: 250px;
-        height: 150px;      
-    }
-    .seta{
-        transform: translate(-50%, 1115%);
-    }
-  }
+}
 
-  @media only screen and (max-width: 650px) {
-    .tex{
-        font-size: 15px;
-    }
-    .c , .d{
-        width: 220px;
-        height: 140px;      
-    }
-    .seta{
-        transform: translate(-50%, 1115%);
-    }
-    .Projetos{
-        top: 80%;
-        width:  580px;
-        height: 456px;
-    }
-  }
-  @media only screen and (max-width: 580px) {
-    .c , .d{
-        width: 260px;
-        height: 180px;
-        float: none;
-        margin: 6% 0 0 27%;      
-    }
-    .Projetos{
-        top: 80%;
-        width:  478px;
-        height: 456px;
-    }
-    .btn{
-        left: 20%;
-    }
-    .btnw{
-        left: 70%;
-    }
-    .btnx{
-        top: 65%;
-        left: 44%;
-    }
-  }
-  @media only screen and (max-width: 480px) {
-    .c , .d{
-        float: none;
-        margin: 6% 0 0 22%;      
-    }
-    .Projetos{
-        top: 80%;
-        width:  398px;
-        height: 456px;
-    }
+@media only screen and (max-width: 850px) {
+.tex{
+    font-size: 18px;
+}
+.adjust-a , .adjust-b{
+    width: 250px;
+    height: 150px;      
+}
+.seta{
+    transform: translate(-50%, 1115%);
+}
+  
+}
 
-  }
-  @media only screen and (max-width: 400px) {
-    .c , .d{
-        float: none;
-        margin: 6% 0 0 19%;      
-    }
-    .Projetos{
-        top: 80%;
-        width:  378px;
-        height: 456px;
-    }
-    .btn{
-        top: 37%;
-        left: 44%;
-    }
-    .btnw{
-        top: 50%;
-        left: 44%; 
-    }
-    .btnx{
-        top: 65%;
-        left: 44%;
-    }
-    .btn-s{
-        box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
-    }
-  }
-  @media only screen and (max-width: 380px) {
-    .c , .d{
-        float: none;
-        margin: 6% 0 0 16%;      
-    }
-    .Projetos{
-        top: 80%;
-        width:  338px;
-        height: 456px;
-    }
-  }
-  @media only screen and (max-width: 340px) {
-    .c , .d{
-        width: 200px;
-        height: 150px; 
-    }
+@media only screen and (max-width: 650px) {
+.tex{
+    font-size: 15px;
+}
+.adjust-a , .adjust-b{
+    width: 220px;
+    height: 140px;      
+}
+.seta{
+    transform: translate(-50%, 1115%);
+}
+.Projetos{
+    top: 80%;
+    width:  580px;
+    height: 456px;
+}
+  
+}
+@media only screen and (max-width: 580px) {
+.adjust-a , .adjust-b{
+    width: 260px;
+    height: 180px;
+    float: none;
+    margin: 6% 0 0 27%;      
+}
+.Projetos{
+    top: 80%;
+    width:  478px;
+    height: 456px;
+}
+.btn{
+    left: 20%;
+}
+.btnw{
+    left: 70%;
+}
+.btnx{
+    top: 65%;
+    left: 44%;
+}
 
-    .Projetos{
-        top: 50%;
-        width: 197px;
-        height: 645px;
-    }
-    .tm{
-        font-size: 12px;
-        margin: 35% 0 0 0;
-    }
-    .btn{
-        top: 50%;
-        left: 35%;
-    }
-    .btnw{
-        top: 60%;
-        left: 35%;
-    }
-    .btnx{
-        top: 70%;
-        left: 35%;
-    }
-  }
+}
+@media only screen and (max-width: 480px) {
+.adjust-a , .adjust-b{
+    margin: 6% 0 0 22%;      
+}
+.Projetos{
+    width:  398px;
+    height: 456px;
+}
+
+}
+@media only screen and (max-width: 400px) {
+.adjust-a , .adjust-b{
+    margin: 6% 0 0 19%;      
+}
+.Projetos{
+    width:  378px;
+    height: 456px;
+}
+.btn, .btnw, .btnx {
+    top: 37%;
+    left: 44%;
+}
+.btnw{
+    top: 50%;
+}
+.btnx{
+    top: 65%;
+}
+.btn-s{
+    box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+}
+
+}
+@media only screen and (max-width: 380px) {
+.adjust-a , .adjust-b{
+    margin: 6% 0 0 16%;      
+}
+.Projetos{
+    width:  338px;
+    height: 456px;
+}
+
+}
+@media only screen and (max-width: 340px) {
+.adjust-a , .adjust-b{
+    width: 200px;
+    height: 150px; 
+}
+.Projetos{
+    top: 50%;
+    width: 197px;
+    height: 645px;
+}
+.tm{
+    font-size: 12px;
+    margin: 35% 0 0 0;
+}
+.btn, .btnx, .btnw{
+    top: 50%;
+    left: 35%;
+}
+.btnw{
+    top: 60%;
+}
+.btnx{
+    top: 70%;
+}
+
+}
 
 @media only screen and (max-height: 600px) {
-    .Projetos{
-        top: 5%;
-    }
-  }
+.Projetos{
+    top: 5%;
+}
+
+}
   @media only screen and (max-width: 1300px) and (max-height: 600px) {
-    .Projetos{
-        top: 40%;
-    }
-  }
-  @media only screen and (max-width: 1130px) and (max-height: 600px) {
-    .Projetos{
-        top: 75%;
-    }
-  }
-  @media only screen and (max-width: 340px) and (max-height: 600px) {
-    .Projetos{
-        top: 35%;
-    }
-  }
+.Projetos{
+    top: 40%;
+}
+
+}
+@media only screen and (max-width: 1130px) and (max-height: 600px) {
+.Projetos{
+    top: 75%;
+}
+
+}
+@media only screen and (max-width: 340px) and (max-height: 600px) {
+.Projetos{
+    top: 35%;
+}
+}
