--- a/src/app/component/views/start/start.component.html
+++ b/src/app/component/views/start/start.component.html
@@ -1,30 +1,35 @@
+<!--Página principal-->
+<div class="main" id="start"> 
 
-<div class="idem" id="start"> 
+    <div>
+        <p class="tex"> 
+            Pensado na ideia de criar um portfólio, o objetivo principal é compartilhar projetos e afins já criados, abaixo você consegue ver projetos de minha autoria
+            e ainda o processo de elaboração e criação deste portfólio, fique a vontade para navegar e entender um pouco mais, caso contratio, a próxima seção te mostra 
+            o mais sobre minhas formações e experiências.
+        </p>
 
-<div>
-    <p class="tex"> 
-        Pensado na ideia de criar um portfólio, o objetivo principal é compartilhar projetos e afins já criados, abaixo você consegue ver projetos de minha autoria
-        e ainda o processo de elaboração e criação deste portfólio, fique a vontade para navegar e entender um pouco mais, caso contratio, a próxima seção te mostra 
-        o mais sobre minhas formações e experiências.
-    </p>
-
-       <a (click)="showprojet()" > <img class="box adjust-a" src="assets/sobre/Projetos.jpg"></a>
+        <a (click)="showprojet()" > <img class="box adjust-a" src="assets/sobre/Projetos.jpg"></a>
     
-       <a target="_blank" href="https://github.com/EmanuelRLima/portfolio-web"><img class="box adjust-b" src="assets/sobre/Portfolio.png"></a>
+        <a target="_blank" href="https://github.com/EmanuelRLima/portfolio-web"><img class="box adjust-b" src="assets/sobre/Portfolio.png"></a>
 
-</div>
-<div class="setaa">
-<section>   
-    <a href="#curriculo"> <img class="seta" src="assets/complementos/arrowdraw.png"> </a>
-</section>
+    </div>
 
-</div>
-</div>
+    <div>
+        <section>   
+            <a href="#curriculo"> <img class="seta" src="assets/complementos/arrowdraw.png"> </a>
+        </section>
+
+    </div>
+
+    </div>
+
+<!--Inicio do Box-->
+
 <div id="project" class="Projetos">
 
     <a (click)="showoffprojet()" > <img class="X" src="assets/sobre/x.png"></a>
     
-<p class="tex tm"> 
+    <p class="tex tm"> 
         Abaixo eu disponibilizo alguns projetos que já foram feitos criado por mim, ao cliclar você será redirecionado para o GitHub onde entederá melhor sobre o projeto, sempre que houverem projetos novos atualizarei essa pagina.
     </p>
     
@@ -33,4 +38,5 @@
     <a target="_blank" href="https://github.com/EmanuelRLima/Portfolio" class="btn btn-s">Primeiro Portfólio</a>
 
     <a class="btnx btn btn-s">Em breve...</a>
+
 </div>
