--- a/src/app/component/views/start/start.component.css
+++ b/src/app/component/views/start/start.component.css
@@ -4,7 +4,7 @@
     font-family: 'Roboto Serif', sans-serif;
 }
 /*Definições da página*/ 
-.idem{
+.main{
     width: 100%;
     height: 965px;
     background-color: #f7f7fd;;
