--- a/src/app/component/views/sobre/sobre.component.html
+++ b/src/app/component/views/sobre/sobre.component.html
@@ -1,10 +1,11 @@
-
+<!--Página principal-->
 <div class="main" id="sobre">
     <p class="tex"> 
         Agora, quem é Emanuel ? Fique a vontade para ler um pouco sobre minha pessoa.
     </p>
 
     <div class="St">
+        
         <img class="img" src="assets/sobre/emanuel.jpg">
         
         <p class="sobre"> Olá, meu nome é Emanuel e tenho 21 anos, filho de pais separados, residindo em Natal, Rio grande do Norte, e apesar de ser um local conhecido por praias eu não costumo ir a elas, gosto pessoal. Tenho um gato que se chama "Dog" e um cachorro que se chama "Owen", sim, eu pensei em ser "Cat" mas não combinava muito. <br/> <br/>
@@ -13,7 +14,9 @@
             Bem, espero que já sejamos mais próximos depois disso, qualquer coisa é só me contatar e vamos fazer aquele job, obrigado por ter acessado.</p>
     
     </div>
+    
     <section>   
         <a href="#contatos"> <img class="seta" src="assets/complementos/arrow.png"> </a>
     </section>
+    
 </div>
